--- a/config/assets.yml
+++ b/config/assets.yml
@@ -1,6 +1,7 @@
 javascripts:
   app:
     - public/javascripts/jquery.min.js
+    - public/javascripts/jquery.masonry.min.js
     - public/javascripts/jquery_ujs.js
     - public/javascripts/application.js
 stylesheets:
