Updates with new gems and real time support

--- a/config/assets.yml
+++ b/config/assets.yml
@@ -7,4 +7,5 @@ javascripts:
     - public/javascripts/application.js
 stylesheets:
   app:
-    - public/stylesheets/*.css
+    - public/stylesheets/scaffold.css
+    - public/stylesheets/layout.css
