--- a/config/assets.yml
+++ b/config/assets.yml
@@ -1,6 +1,8 @@
 javascripts:
   app:
     - public/javascripts/jquery.min.js
+    - public/javascripts/cufon.js
+    - public/javascripts/Copper.font.js
     - public/javascripts/jquery.masonry.min.js
     - public/javascripts/jquery_ujs.js
     - public/javascripts/jquery_ui.custom.min.js
