--- a/config/assets.yml
+++ b/config/assets.yml
@@ -8,9 +8,13 @@ javascripts:
     - public/javascripts/jquery_ui.custom.min.js
     - public/javascripts/jquery.oembed.min.js
     - public/javascripts/jquery.tipsy.js
+    - public/javascripts/fancybox/jquery.easing-1.3.pack.js
+    - public/javascripts/fancybox/jquery.mousewheel-3.0.4.pack.js
+    - public/javascripts/fancybox/jquery.fancybox-1.3.4.pack.js
     - public/javascripts/application.js
 stylesheets:
   app:
     - public/stylesheets/scaffold.css
     - public/stylesheets/tipsy.css
     - public/stylesheets/layout.css
+    - public/javascripts/fancybox/jquery.fancybox-1.3.4.css
