--- a/config/assets.yml
+++ b/config/assets.yml
@@ -1,5 +1,5 @@
 javascripts:
-  app:
+  libs:
     - public/javascripts/jquery.min.js
     - public/javascripts/cufon.js
     - public/javascripts/Copper.font.js
@@ -8,9 +8,11 @@ javascripts:
     - public/javascripts/jquery_ui.custom.min.js
     - public/javascripts/jquery.oembed.min.js
     - public/javascripts/jquery.tipsy.js
+  fancybox:
     - public/javascripts/fancybox/jquery.easing-1.3.pack.js
     - public/javascripts/fancybox/jquery.mousewheel-3.0.4.pack.js
     - public/javascripts/fancybox/jquery.fancybox-1.3.4.pack.js
+  app:
     - public/javascripts/application.js
 stylesheets:
   app:
